# licensecc

./: .gitignore  CMakeLists.txt  build.bat  build.sh
include/licensecc/: datatypes.h
src/: CMakeLists.txt
src/inspector/: CMakeLists.txt  inspector.cpp
src/templates/: licensecc_properties.h.in
test/: CMakeLists.txt
test/functional/: CMakeLists.txt  crack_test.cpp  date_test.cpp  generate-license.cpp  hw_identifier_it_test.cpp  standard-license_test.cpp
